k3s/manifests/ipa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipa-external
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: default-insecure-skip-verify@kubernetescrd
spec:
  ports:
    - port: 443
      targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ipa-external
  namespace: default
subsets:
  - addresses:
      - ip: 10.33.111.100
    ports:
      - port: 443
