k3s/manifests/ipa/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ipa-redirect-ui
  namespace: default
spec:
  redirectRegex:
    regex: "^https://ipa\\.arpatek\\.dev/?$"
    replacement: "https://ipa.arpatek.dev/ipa/ui/"
    permanent: false
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipa
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-ipa-redirect-ui@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ipa.arpatek.dev
      secretName: arpatek-dev-tls
  rules:
    - host: ipa.arpatek.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ipa-external
                port:
                  number: 443
